# LexLink-ko-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Procfile  README.md  README_kr.md  pyproject.toml  smithery.yaml
assets/: DEPLOYMENT_GUIDE.md
docs/: API_CATALOG.md  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  HISTORY.md  ISSUES.md  README.md  ROADMAP.md  STATUS.md  poc-format-comparison.md
docs/GCP_deployment/: Dockerfile  QUICKSTART.md  README.md  cloudbuild.yaml  smoke_test.sh
docs/internal_GCP_deployment/: Dockerfile  QUICKSTART.md  README.md  cloudbuild.yaml
docs/reference/: 01_PRD.md  02_technical_design.md  05_implementation_roadmap.md  07_api_provider_issues.md  09_context_injection_implementation.md  README.md
docs/specs/: 2026-03-30-public-legal-features-design.md
src/lexlink/: __init__.py  _helpers.py  cache.py  citation.py  client.py  config.py  errors.py  http_server.py  log_processor.py  params.py  parser.py  ranking.py  raw_logger.py  resolver.py  server.py  stdio_server.py  validation.py
test/: README.md  __init__.py  run_test.sh  test_all_15_tools.py  test_e2e_with_gemini.py  test_llm_integration.py  test_semantic_validation.py
test/docs/: COMPREHENSIVE_TEST_SUMMARY.md  SEMANTIC_VALIDATION_SUMMARY.md  VALIDATOR_INVESTIGATION_REPORT.md
test/logs/: lexlink_all_tools_test_20251107_145559.json  lexlink_all_tools_test_20251107_145559.md  lexlink_all_tools_test_20251107_145634.json  lexlink_all_tools_test_20251107_145634.md  lexlink_all_tools_test_20251107_145944.json  lexlink_all_tools_test_20251107_145944.md  lexlink_e2e_gemini_20251107_135331.json  lexlink_e2e_gemini_20251107_135331.md  lexlink_e2e_gemini_20251107_140117.json  lexlink_e2e_gemini_20251107_140117.md  lexlink_e2e_gemini_20251107_144826.json  lexlink_e2e_gemini_20251107_144826.md  lexlink_e2e_gemini_20251114_154612.json  lexlink_e2e_gemini_20251114_154612.md  lexlink_e2e_gemini_20251114_154635.json  lexlink_e2e_gemini_20251114_154635.md  lexlink_e2e_gemini_20251114_154721.json  lexlink_e2e_gemini_20251114_154721.md  lexlink_e2e_gemini_20251114_154747.json  lexlink_e2e_gemini_20251114_154747.md  lexlink_e2e_gemini_20251114_154806.json  lexlink_e2e_gemini_20251114_154806.md  lexlink_e2e_gemini_20251114_154813.json  lexlink_e2e_gemini_20251114_154813.md  lexlink_e2e_gemini_20251114_162209.json  lexlink_e2e_gemini_20251114_162209.md  lexlink_e2e_gemini_20251114_162259.json  lexlink_e2e_gemini_20251114_162259.md  lexlink_llm_integration_20251107_210513.json  lexlink_llm_integration_20251107_210513.md  lexlink_llm_integration_20251107_223912.json  lexlink_llm_integration_20251107_223912.md  lexlink_llm_integration_20251107_224253.json  (+3 more)
tests/: resource_preference_raw.json  resource_preference_report.md  test_resource_preference.py  verify_seed_ids.py
(+11 files in other folders)
